apps/base/httpbin/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-virtualservice
spec:
  gateways:
    - istio-ingress/wildcard-gateway
  hosts:
    - httpbin.${cluster_subdomain}
  http:
    - route:
        - destination:
            host: httpbin.httpbin.svc.cluster.local
            port:
              number: 8000
